--- a/app/globals.css
+++ b/app/globals.css
@@ -75,3 +75,10 @@
 body {
   font-family: var(--font-raleway);
 }
+
+:root{
+  --font-raleway:"Raleway", sans-serif;
+}
+body{
+  font-family: var(--font-raleway);
+}
